# SLET

./: CMakeLists.txt  README.md  gt_pose.txt
src/app/: CMakeLists.txt  run_on_video.cc
src/base/: CMakeLists.txt  camcorder.hh  global_param.cc  global_param.hh  pose_io.hh  types.hh  util.cc  util.hh
src/mbt/: CMakeLists.txt  camera.cc  camera.hh  histogram.cc  histogram.hh  m_func.cc  m_func.hh  model.cc  model.hh  object3d.cc  object3d.hh  search_line.cc  search_line.hh  signed_distance_transform2d.cc  signed_distance_transform2d.hh  tclc_histograms.cc  tclc_histograms.hh  template_view.cc  template_view.hh  tracker.cc  tracker.hh  tracker_sle.cc  tracker_sle.hh  transformations.cc  transformations.hh  view.cc  view.hh  viewer.cc  viewer.hh
src/mbt/shader/: glsl2cpp.py  normals_fragment_shader.glsl  normals_vertex_shader.glsl  phongblinn_fragment_shader.glsl  phongblinn_vertex_shader.glsl  shaders.hh  silhouette_fragment_shader.glsl  silhouette_vertex_shader.glsl
